# poki-launcher

./: .build.yml  .gitignore  .travis.yml  Cargo.toml  README.md  action.yml  poki-launcher.hjson  rustfmt.toml
.github/workflows/: ci.yml
launcher/: Cargo.toml
launcher-gtk/: Cargo.toml
launcher-gtk/src/: app.css  main.rs
launcher/src/: config.rs  db.rs  desktop_entry.rs  lib.rs  runner.rs  scan.rs
lib-poki-launcher/: Cargo.toml
lib-poki-launcher/src/: config.rs  db.rs  desktop_entry.rs  event.rs  frecency_db.rs  lib.rs  run.rs  runner.rs  scan.rs
lib-poki-launcher/src/plugins/: mod.rs
lib-poki-launcher/src/plugins/apps/: db.rs  desktop_entry.rs  mod.rs  runner.rs  scan.rs
lib-poki-launcher/src/plugins/files/: mod.rs
pkg/opensuse/: poki-launcher.spec
poki-launcher/: Cargo.toml  MainForm.ui.qml  bindings.json  build.rs  main.qml  qml.qrc
poki-launcher-notifier/: Cargo.toml
poki-launcher-notifier/src/: lib.rs
poki-launcher-x11/: Cargo.toml
poki-launcher-x11/examples/: raise_by_pid.rs
poki-launcher-x11/src/: lib.rs
poki-launcher/src/: icon.cpp  implementation.rs  main.cpp  main.rs  ui.rs
poki-launcher/ui/: MainForm.ui.qml  main.qml
scripts/: ci.sh  vendor.sh
src/: app.css  db.rs  desktop_entry.rs  desktop_file.pest  desktop_file.rs  lib.rs  main.rs  runner.rs  scan.rs
