[package]
name = "launcher"
version = "0.1.0"
authors = ["Ben Goldberg <benaagoldberg@gmail.com>"]
edition = "2018"

[lib]
name = "launcher"
path = "src/lib.rs"

[dependencies]
derive-new = "0.5.6"
log = "0.4.6"
pest = "2.1.1"
pest_derive = "2.1.0"
pest-ast = "0.3.3"
from-pest = "0.3.1"
nom = "5.0.0-beta1"
