[package]
name = "launcher"
version = "0.1.0"
authors = ["Ben Goldberg <benaagoldberg@gmail.com>"]
edition = "2018"

[lib]
name = "launcher"
path = "src/lib.rs"

[dependencies]
derive-new = "0.5.6"
failure = "0.1.5"
log = "0.4.6"
serde = "1.0.92"
serde_derive = "1.0.92"
rust-ini = "0.13"
rmp-serde = "0.13.7"
fuzzy-matcher = "0.2.1"
gio = "0.6.0"

[dependencies.gtk]
version = "0.6.0"
features = ["v3_16"]
