[package]
name = "launcher-gtk"
version = "0.1.0"
authors = ["zethra <jediben97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.6.0"
glib = "0.7.1"
gdk = "0.10.0"
lazy_static = "1.3"
itertools = "0.8"
fuzzy-matcher = "0.2.1"
rmp-serde = "0.13.7"
serde = "1.0.92"
poki-launcher = { path = "../launcher" }

[dependencies.gtk]
version = "0.6.0"
features = ["v3_16"]
