[package]
name = "lib-poki-launcher"
version = "0.1.0"
authors = ["Ben Goldberg <benaagoldberg@gmail.com>"]
edition = "2018"

[dependencies]
derive-new = "0.5.6"
failure = "0.1.5"
log = "0.4.6"
serde = "1.0.92"
serde_derive = "1.0.92"
rust-ini = "0.13"
rmp-serde = "0.13.7"
fuzzy-matcher = "0.2.1"
itertools = "0.8"
