[package]
name = "lib-poki-launcher"
version = "0.1.0"
authors = ["Ben Goldberg <benaagoldberg@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
rust-ini = "0.13"
rmp-serde = "0.13"
fuzzy-matcher = "0.2"
itertools = "0.8"
uuid = { version = "0.7", features = ["serde", "v4"]}
config = "0.9"
directories = "2.0"
lazy_static = "1.4"