[package]
name = "lib-poki-launcher"
version = "0.1.0"
authors = ["Ben Aaron <benaagoldberg@gmail.com>"]
description = "The gui framework library backing poki-launcher"
homepage = "https://github.com/zethra/poki-launcher"
repository = "https://github.com/zethra/poki-launcher"
keywords =["launcher"]
license = "GPL3"
edition = "2018"

[dependencies]
failure = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
rust-ini = "0.13"
rmp-serde = "0.14.0"
fuzzy-matcher = "0.2"
uuid = { version = "0.7", features = ["serde", "v4"]}
config = "0.9"
directories = "2.0"
lazy_static = "1.4"
poki-launcher-x11 = { path = "../poki-launcher-x11"}
nix = "0.15"
shellexpand = "1.0"
itertools = "0.8"