#
# This file is part of Poki Launcher.
#
# Poki Launcher is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Poki Launcher is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Poki Launcher.  If not, see <https://www.gnu.org/licenses/>.
#

[package]
name = "lib-poki-launcher"
version = "0.1.0"
authors = ["Ben Aaron <benaagoldberg@gmail.com>"]
description = "The gui framework library backing poki-launcher"
homepage = "https://github.com/zethra/poki-launcher"
repository = "https://github.com/zethra/poki-launcher"
keywords =["launcher"]
license = "GPL-3.0-only"
edition = "2018"

[dependencies]
failure = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
rust-ini = "0.13"
rmp-serde = "0.14.0"
fuzzy-matcher = "0.2"
uuid = { version = "0.7", features = ["serde", "v4"]}
config = "0.9"
directories = "2.0"
lazy_static = "1.4"
poki-launcher-x11 = { version = "0.1.0", path = "../poki-launcher-x11" }
nix = "0.15"
shellexpand = "1.0"
itertools = "0.8"
walkdir = "2.2"