[package]
name = "poki-launcher-notifier"
version = "0.0.0"
authors = ["Ben Goldberg <benaagoldberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = "0.1"
libc = "0.2"
nix = "0.15"
failure = "0.1"