[package]
name = "poki-launcher-notifier"
version = "0.1.0"
authors = ["Ben Aaron <benaagoldberg@gmail.com>"]
description = "A library to notify poki-launcher to show itself"
homepage = "https://github.com/zethra/poki-launcher"
repository = "https://github.com/zethra/poki-launcher"
keywords =["linux"]
license = "GPL-3.0-only"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = "0.1"
libc = "0.2"
nix = "0.15"
failure = "0.1"