#
# This file is part of Poki Launcher.
#
# Poki Launcher is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Poki Launcher is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Poki Launcher.  If not, see <https://www.gnu.org/licenses/>.
#

[package]
name = "poki-launcher-notifier"
version = "0.1.0"
authors = ["Ben Aaron <benaagoldberg@gmail.com>"]
description = "A library to notify poki-launcher to show itself"
homepage = "https://github.com/zethra/poki-launcher"
repository = "https://github.com/zethra/poki-launcher"
keywords =["linux"]
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = "0.1"
libc = "0.2"
nix = "0.17"
anyhow = "1.0"