[package]
name = "poki-launcher-x11"
version = "0.0.0"
authors = ["Ben Aaron <benaagoldberg@gmail.com>"]
description = "A library for poki-launcher to do X11 stuff"
homepage = "https://github.com/zethra/poki-launcher"
repository = "https://github.com/zethra/poki-launcher"
keywords =[]
license = "GPL3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = { version = "2.18", features = ["xlib"] }
libc = "0.2"