[package]
name = "poki-launcher"
version = "0.1.1"
authors = ["Ben Aaron <benaagoldberg@gmail.com>"]
description = "An application launcher for Linux"
homepage = "https://github.com/zethra/poki-launcher"
repository = "https://github.com/zethra/poki-launcher"
keywords =["launcher", "linux", "gui"]
license = "GPL-3.0-only"
build = "build.rs"
links = "poki-launcher"
edition = "2018"

[dependencies]
libc = "0.2"
gtk = "0.7"
nix = "0.15"
lib-poki-launcher = { version = "0.1.0", path = "../lib-poki-launcher" }
poki-launcher-notifier = { version = "0.1.0", path = "../poki-launcher-notifier" }
poki-launcher-x11 = { version = "0.1.0", path = "../poki-launcher-x11" }
structopt = "0.3"
rmp-serde = "0.14.0"
serde_json = "1.0"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.7"
failure = "0.1"
human-panic = "1.0"

[build-dependencies]
rust_qt_binding_generator = "0.3"
