#
# This file is part of Poki Launcher.
#
# Poki Launcher is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Poki Launcher is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Poki Launcher.  If not, see <https://www.gnu.org/licenses/>.
#

[package]
name = "poki-launcher"
version = "0.1.1"
authors = ["Ben Aaron <benaagoldberg@gmail.com>"]
description = "An application launcher for Linux"
homepage = "https://github.com/zethra/poki-launcher"
repository = "https://github.com/zethra/poki-launcher"
keywords =["launcher", "linux", "gui"]
license = "GPL-3.0-only"
build = "build.rs"
links = "poki-launcher"
edition = "2018"

[dependencies]
libc = "0.2"
gtk = "0.7"
nix = "0.15"
lib-poki-launcher = { version = "0.1.0", path = "../lib-poki-launcher" }
poki-launcher-notifier = { version = "0.1.0", path = "../poki-launcher-notifier" }
poki-launcher-x11 = { version = "0.1.0", path = "../poki-launcher-x11" }
structopt = "0.3"
rmp-serde = "0.14.0"
serde_json = "1.0"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.7"
failure = "0.1"
human-panic = "1.0"

[build-dependencies]
rust_qt_binding_generator = "0.3"
