#
# This file is part of Poki Launcher.
#
# Poki Launcher is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Poki Launcher is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Poki Launcher.  If not, see <https://www.gnu.org/licenses/>.
#

[package]
name = "poki-launcher"
version = "0.6.0"
authors = ["Ben Aaron <benaagoldberg@gmail.com>"]
description = "An application launcher for Linux"
homepage = "https://github.com/zethra/poki-launcher"
repository = "https://github.com/zethra/poki-launcher"
keywords =["launcher", "linux", "gui"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
libc = "0.2"
nix = "0.17"
lib-poki-launcher = { version = "0.3.0", path = "../lib-poki-launcher" }
poki-launcher-notifier = { version = "0.1.0", path = "../poki-launcher-notifier" }
structopt = "0.3"
rmp-serde = "0.14"
serde_json = "1.0"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.7"
anyhow = "1.0"
human-panic = "1.0"
qmetaobject = { git = "https://github.com/zethra/qmetaobject-rs.git", rev = "8bd0121"}
cstr = "0.1"
cpp = "0.5"
notify = "4.0"
shellexpand = "2.0"

[build-dependencies]
cpp_build = "0.5"

